--- a/single-account-single-cluster-multi-env/Makefile
+++ b/single-account-single-cluster-multi-env/Makefile
@@ -5,7 +5,7 @@ SHELLFLAGS = -o pipefail
 ENVIRONMENT ?= dev
 AWS_REGION ?= $(shell aws configure get region)
 AWS_ACCOUNT_ID ?= $(shell aws sts get-caller-identity --output json | jq -r '.Account')
-TFSTATE_S3_BUCKET ?= "tfstate-$(AWS_ACCOUNT_ID)"
+TFSTATE_S3_BUCKET ?= "tfstate-$(AWS_ACCOUNT_ID)-dev"
 TFSTATE_REGION ?= $(AWS_REGION)
 TFSTATE_DDB_TABLE ?= "tfstate-lock"
 VAR_FILE := $(CURDIR)/00.global/vars/$(ENVIRONMENT).tfvars
